kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-final-service
  namespace: staging
  labels:
    environment: staging
spec:
  type: ClusterIP  # Staging dùng ClusterIP (internal), không cần LoadBalancer
  selector:
    app: nodejs-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
